BPER/DEVF/force-app/main/default/objects/BookMember__c/BookMember__c.object-meta.xml
<CustomObject>
    <label>Storico Portafogli NDG</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>NDG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storico Portafogli NDG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>