BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/Check_Level_User__c.field-meta.xml
<CustomField>
    <fullName>Check_Level_User__c</fullName>
    <description>Condition for Spostamenti senza Iter</description>
    <formula>OR(
  AND(
        PTF_IsDRVisible__c , PTF_IsUserUffPrivate__c

  ),
  
  AND(
       PTF_IsUserUffPrivate__c = false ,
     
       OR (  
            PTF_CheckFilialePartenza__c ,  
            PTF_CheckFilialeDestinazione__c ,  
            PTF_CheckAreaPartenza__c ,  
            PTF_CheckAreaDestinazione__c ,  
            PTF_CheckDRPartenza__c ,  
            PTF_CheckDRDestinazione__c ,  
            PTF_CheckBanca__c ,  
            PTF_ManageD2__c ,  
            PTF_IsGruppo__c 
       )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Level User</label>
    <type>Checkbox</type>
</CustomField>