BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/CRM_ReferenteDa__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferenteDa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referente Da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>