BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/CRM_ReferentePortafoglio__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferentePortafoglio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente Portafoglio</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storico Portafogli NDG</relationshipLabel>
    <relationshipName>Storico_Portafogli_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>