BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/CRM_TipologiaSpostamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipologiaSpostamento__c</fullName>
    <formula>IF(
				AND(PTF_MDSDestinazione__c != PTF_MDSPartenza__c, PTF_FinalFiliale__c != PTF_InitialFiliale__c, PTF_MicroWallet__c != PTF_PreviousMicroWallet__c),
                &apos;Cambio Modello di Servizio, Filiale e Portafoglio&apos;,
                IF(
                    PTF_MDSDestinazione__c != PTF_MDSPartenza__c,
                    &apos;Cambio Modello di Servizio e Portafoglio&apos;,
                    IF(
                                    PTF_FinalFiliale__c != PTF_InitialFiliale__c,
                                    &apos;Cambio Filiale e Portafoglio&apos;,
                                    IF(
                                                    PTF_MicroWallet__c != PTF_PreviousMicroWallet__c,
                                                    &apos;Cambio Portafoglio&apos;,
                                                    &apos;Nessun cambio&apos;
                                    )
                    )
                )    
)</formula>
    <label>TipologiaSpostamento</label>
    <type>Text</type>
</CustomField>