BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/Data_spostamento_CF__c.field-meta.xml
<CustomField>
    <fullName>Data_spostamento_CF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data spostamento CF</label>
    <type>DateTime</type>
</CustomField>