BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_AreaDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_AreaDestinazione__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Area__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area destinazione</label>
    <type>Text</type>
</CustomField>