BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_AreaPartenza__c.field-meta.xml
<CustomField>
    <fullName>PTF_AreaPartenza__c</fullName>
    <formula>PTF_PreviousMicroWallet__r.PTF_Area__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area partenza</label>
    <type>Text</type>
</CustomField>