BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_Banca__c.field-meta.xml
<CustomField>
    <fullName>PTF_Banca__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Banca__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banca</label>
    <type>Text</type>
</CustomField>