BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CheckBanca__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckBanca__c</fullName>
    <formula>OR (
AND(PTF_PreviousMicroWallet__r.PTF_Banca__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null),
AND(PTF_PreviousMicroWallet__r.PTF_Banca__r.PTF_IdCED__c == $User.PTF_IdCEDPadre__c, $User.PTF_IdCEDPadre__c != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Banca</label>
    <type>Checkbox</type>
</CustomField>