BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CheckDRDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckDRDestinazione__c</fullName>
    <formula>OR (
AND(PTF_MicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null),
AND(PTF_MicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c == $User.PTF_IdCEDPadre__c, $User.PTF_IdCEDPadre__c != null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check DR Destinazione</label>
    <type>Checkbox</type>
</CustomField>