BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CheckFilialeDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckFilialeDestinazione__c</fullName>
    <formula>AND(PTF_MicroWallet__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Filiale destinazione</label>
    <type>Checkbox</type>
</CustomField>