BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CheckFilialePartenza__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckFilialePartenza__c</fullName>
    <formula>OR(
AND (PTF_PreviousMicroWallet__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null),
AND (PTF_PreviousMicroWallet__r.PTF_Capofila__r.PTF_IdCED__c == $User.idced__c, $User.idced__c != null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Filiale partenza</label>
    <type>Checkbox</type>
</CustomField>