BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CodicePortafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_CodicePortafoglio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Portafoglio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>