BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_CRM_NDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_CRM_NDG__c</fullName>
    <description>Numero dell&apos;NDG</description>
    <formula>PTF_NDG__r.CRM_NDG__c</formula>
    <label>CRM NDG</label>
    <type>Text</type>
</CustomField>