BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_DataSpostamento__c.field-meta.xml
<CustomField>
    <fullName>PTF_DataSpostamento__c</fullName>
    <formula>IF(
NOT(ISBLANK(Data_spostamento_CF__c)),
Data_spostamento_CF__c,
CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data spostamento</label>
    <type>DateTime</type>
</CustomField>