BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_DRDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_DRDestinazione__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_DirezioneRegionale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direzione Regionale destinazione</label>
    <type>Text</type>
</CustomField>