BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_DRPartenza__c.field-meta.xml
<CustomField>
    <fullName>PTF_DRPartenza__c</fullName>
    <formula>PTF_PreviousMicroWallet__r.PTF_DirezioneRegionale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direzione Regionale partenza</label>
    <type>Text</type>
</CustomField>