BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_FinalFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_FinalFiliale__c</fullName>
    <formula>PTF_MicroWallet__r.PTF_Filiale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale Destinazione</label>
    <type>Text</type>
</CustomField>