BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_InitialFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_InitialFiliale__c</fullName>
    <formula>PTF_PreviousMicroWallet__r.PTF_Filiale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale Origine</label>
    <type>Text</type>
</CustomField>