BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_IsDRVisible__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsDRVisible__c</fullName>
    <formula>OR(
AND (
PTF_PreviousMicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c != null,
CONTAINS ( $User.PTF_DirezioniRegionaliVisibili__c , PTF_PreviousMicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c)
),
AND (
PTF_MicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c != null,
CONTAINS ( $User.PTF_DirezioniRegionaliVisibili__c , PTF_MicroWallet__r.PTF_DirezioneRegionale__r.PTF_IdCED__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DR visible</label>
    <type>Checkbox</type>
</CustomField>