BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_IsUserUffPrivate__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsUserUffPrivate__c</fullName>
    <formula>$User.PTF_IsUffPrivate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Uff. Private</label>
    <type>Checkbox</type>
</CustomField>