BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_Iter__c.field-meta.xml
<CustomField>
    <fullName>PTF_Iter__c</fullName>
    <formula>IF(PTF_WorkOrder__c &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp; PTF_WorkOrder__c, PTF_WorkOrder__r.WorkOrderNumber),null)</formula>
    <label>Iter</label>
    <type>Text</type>
</CustomField>