BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_MDSDestinazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_MDSDestinazione__c</fullName>
    <formula>TEXT( PTF_MicroWallet__r.PTF_ModelloDiServizio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro-modello di servizio destinazione</label>
    <type>Text</type>
</CustomField>