BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_MDSPartenza__c.field-meta.xml
<CustomField>
    <fullName>PTF_MDSPartenza__c</fullName>
    <formula>TEXT(PTF_PreviousMicroWallet__r.PTF_ModelloDiServizio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro-modello di servizio partenza</label>
    <type>Text</type>
</CustomField>