BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_MicroWallet__c.field-meta.xml
<CustomField>
    <fullName>PTF_MicroWallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portafoglio</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Storico Portafogli NDG</relationshipLabel>
    <relationshipName>Storico_Portafogli_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>