BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_MicroWalletName__c.field-meta.xml
<CustomField>
    <fullName>PTF_MicroWalletName__c</fullName>
    <formula>PTF_MicroWallet__r.Name</formula>
    <label>MicroWalletName</label>
    <type>Text</type>
</CustomField>