BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_NDG__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storico Portafogli NDG</relationshipLabel>
    <relationshipName>Storico_Portafogli_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>