BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_PreviousMicroWallet__c.field-meta.xml
<CustomField>
    <fullName>PTF_PreviousMicroWallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portafoglio Origine</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Storico Portafogli NDG (Portafoglio Origine)</relationshipLabel>
    <relationshipName>Storico_Portafogli_NDG1</relationshipName>
    <type>Lookup</type>
</CustomField>