BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_PreviousMicroWalletName__c.field-meta.xml
<CustomField>
    <fullName>PTF_PreviousMicroWalletName__c</fullName>
    <formula>PTF_PreviousMicroWallet__r.Name</formula>
    <label>PreviousMicroWalletName</label>
    <type>Text</type>
</CustomField>