BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_Status__c.field-meta.xml
<CustomField>
    <fullName>PTF_Status__c</fullName>
    <formula>TEXT( PTF_WorkOrder__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato</label>
    <type>Text</type>
</CustomField>