BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_TipoSpostamento__c.field-meta.xml
<CustomField>
    <fullName>PTF_TipoSpostamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo di spostamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>