BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/PTF_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>PTF_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Richiesta di spostamento</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Storico Portafogli NDG</relationshipLabel>
    <relationshipName>Storico_Portafogli_NDG</relationshipName>
    <type>Lookup</type>
</CustomField>