BPER/DEVF/force-app/main/default/objects/BookMember__c/fields/SpostamentoUltimaRichiesta__c.field-meta.xml
<CustomField>
    <fullName>SpostamentoUltimaRichiesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SpostamentoUltimaRichiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>